Kubernetes/m1app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m1app
spec:
  selector:
    matchLabels:
      app: m1app
  template:
    metadata:
      labels:
        app: m1app
    spec:
      serviceAccountName: demo-sa
      containers:
      - name: m1app
        image: vishnus5/m1app:new
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: m1-service
spec:
  type: NodePort
  selector:
    app: m1app
  ports:
  - port: 5000
    targetPort: 5000
