Kubernetes/m2app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m2app
spec:
  selector:
    matchLabels:
      app: m2app
  template:
    metadata:
      labels:
        app: m2app
    spec:
      containers:
      - name: m2app
        image: vishnus5/m2app:new
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5001
---

apiVersion: v1
kind: Service
metadata:
  name: m2-service
spec:
  selector:
    app: m2app
  ports:
  - port: 5001
    targetPort: 5001
