Kubernetes/ingress-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-virtualservice
spec:
  hosts:
  - '*'
  gateways:
  - demo-gateway
  http:
  - match:
    - uri:
        prefix: /getInfo
    route:
    - destination:
        port: 
          number: 5000
        host: m1-service.default.svc.cluster.local
