Kubernetes/rds_egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mysql-external
spec:
  hosts:
  - mysql.rds.svc
  addresses:
  - 10.0.1.0/26
  - 10.0.1.64/26
  ports:
  - name: tcp
    number: 3306
    protocol: TCP
  exportTo: 
  - "*"
  location: MESH_EXTERNAL
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 7777
      name: tcp
      protocol: TCP
    hosts:
    - mysql.rds.svc

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-mysql
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: mysql
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mysql
spec:
  host: mysql.rds.svc
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-mysql-through-egress-gateway
spec:
  hosts:
  - mysql.rds.svc
  gateways:
  - mesh
  - istio-egressgateway
  tcp:
  - match:
    - gateways:
      - mesh
      destinationSubnets:
      - 10.63.30.0/24
      port: 3306
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: mysql
        port:
          number: 7777
  - match:
    - gateways:
      - istio-egressgateway
      port: 7777
    route:
    - destination:
        host: mysql.rds.svc
        port:
          number: 3306
      weight: 100
